# ffmpegCamera

./: CMakeLists.txt  README.md
ffmpegCamera-main/ffmpegCamera-main/: README.md
include/: mFilter.h  mPlayer.h  mRecorder.h  processStatus.h  typeAInclude.h
lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  swresample.lib  swscale.lib
source/: mFilter.cpp  mPlayer.cpp  mRecorder.cpp  main.cpp  processStatus.cpp  typeAInclude.cpp
